# note_manager

./: README.md
F_Brain_Lv2/: .gitignore  dev.env  docker-compose.yaml
F_Brain_Lv2/client/: Dockerfile  package.json  vite.config.js
F_Brain_Lv2/proxy/: default.conf
F_Brain_Lv2/server/: Dockerfile  pyproject.toml
F_Brain_Lv2/server/server_config/: settings.py
